# PokeWear

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ! PUT ROM.BIN AND EEPROM.BIN HERE !
app/src/main/cpp/: CMakeLists.txt  definitions.h  lcdMemViewer.c  queue.c  queue.h  regRef.h  walker.c  walker.h  walker_jni.c
app/src/main/java/com/shy/pokewear/presentation/: EmulatorEngine.kt  EmulatorService.kt  MainActivity.kt  NativeBridge.kt  WalkerView.kt
app/src/main/java/com/shy/pokewear/presentation/theme/: Theme.kt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
